Expanded about us section with images

--- a/Projects.html
+++ b/Projects.html
@@ -31,11 +31,18 @@
 
 <div class="Projects">
   <h2>
+    Finished Projects:
+  </h2>
+  <p>
+  
+  </p>
+  <h2>
     Current Projects:
   </h2>
   <p>
   
   </p>
+  </div>
 
 
  <div class="footer">
