--- a/aboutUs.html
+++ b/aboutUs.html
@@ -30,14 +30,18 @@
 </h1>
 
 <div class="CEO">
-  <h2>
-    Meet the CEO:
-  </h2>
-  <p>
-    P. Kac is the CEO founder, and namesake of PK Industries. When not designing a circuit board or project, P. Kac enjoys reading, pixel art, and photography.
-    He has served as the Team Captain of Build on FTC Robotics Team 22064 for 3 years, and Build Team Lead on FRC Robotics Team 167
-    P. Kac taught himself C++ code, microcontroller embedded programming, and circuit board design. He has also taken classes in Javascript, Java, Fusion 360, and Introductionary Electronics
-  </p>
+  <h2>Meet the CEO:</h2>
+  <div class="ceo-content">
+
+    <p>
+      P. Kac is the CEO, founder, and namesake of PK Industries. When not designing a circuit board or project, P. Kac enjoys reading, pixel art, and photography.
+      He has served as the Team Captain of Build on FTC Robotics Team 22064 for 3 years, and Build Team Lead on FRC Robotics Team 167.
+      P. Kac taught himself C++ code, microcontroller embedded programming, and circuit board design. He has also taken classes in JavaScript, Java, Fusion 360, and Introductory Electronics.
+    </p>
+
+    <img src="images/CEOCopy.png" alt="CEO Photo">
+
+  </div>
 </div>
 
 <section class="team">
@@ -45,7 +49,7 @@
 
   <div class="team-grid">
     <div class="member">
-      <img src="" alt="P. Kac">
+      <img src="images\CEOWorking.JPG" alt="P. Kac">
       <h3>P. Kac</h3>
       <p class="short">Founder, CEO, and Lead Engineer of PK Industries</p>
       <p class="long hidden">P. Kac designs circuit boards, software and runs the PK Industries website.</p>
@@ -53,7 +57,7 @@
     </div>
 
     <div class="member">
-      <img src="" alt="CHATGPT">
+      <img src="images\chatgpt.png" alt="CHATGPT">
       <h3>ChatGPT</h3>
       <p class="short">Software Consultant and assistant UI/UX Dev</p>
       <p class="long hidden">While helping out in some software proejcts, no AI is used for art, descriptions or read mes</p>
@@ -61,7 +65,7 @@
     </div>
 
     <div class="member">
-      <img src="" alt="Hack Club">
+      <img src="images\hackClub.png" alt="Hack Club">
       <h3>Hack Club</h3>
       <p class="short">Lead Investor and Sponsor</p>
       <p class="long hidden">Hack Club provides invaluable mentorship and guides as well as investment and sponsorship money</p>
@@ -69,7 +73,7 @@
     </div>
 
     <div class="member">
-      <img src="" alt="Harbor Freigh">
+      <img src="images\harborFreight.png" alt="Harbor Freight">
       <h3>Harbor Freight</h3>
       <p class="short">Premium Tool Supplier</p>
       <p class="long hidden">Our hand tools are supplied by Harbor Freight and have never broken yet. </p>
@@ -77,7 +81,7 @@
     </div>
 
     <div class="member">
-      <img src="" alt="Bambu Lab">
+      <img src="images\bambuLab.png" alt="Bambu Lab">
       <h3>Bambu Lab</h3>
       <p class="short">Additive Manufacturing</p>
       <p class="long hidden">All of our cases and tests fits are printed with the Bambu Lab A1</p>
@@ -85,7 +89,7 @@
     </div>
 
     <div class="member">
-      <img src="" alt="JLCPCB">
+      <img src="images\jlcpcb.png" alt="JLCPCB">
       <h3>JLCPCB</h3>
       <p class="short">Board Partner</p>
       <p class="long hidden">JLCPCB and LCSC have provided board manufacturing and components for our PCBs</p>
@@ -93,15 +97,15 @@
     </div>
 
     <div class="member">
-      <img src="" alt="VSCode">
+      <img src="images\vscode.png" alt="VSCode">
       <h3>VS Code</h3>
       <p class="short">Software Development</p>
-      <p class="long hidden">Our code is written in mainly C++ with VS Code, and uploaded to ithub</p>
+      <p class="long hidden">Our code is written in mainly C++ with VS Code, and uploaded to Github</p>
       <button class="toggle">Read More</button>
     </div>
 
     <div class="member">
-      <img src="" alt="KiCad">
+      <img src="images\kicad.png" alt="KiCad">
       <h3>KiCad</h3>
       <p class="short">Hardware Development</p>
       <p class="long hidden">Our circuit boards are designed in KiCad and routed by hand</p>
