updated the projects section

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -59,7 +59,7 @@
     <div class="member">
       <img src="images\chatgpt.png" alt="CHATGPT">
       <h3>ChatGPT</h3>
-      <p class="short">Software Consultant and assistant UI/UX Dev</p>
+      <p class="short">Software Consultant</p>
       <p class="long hidden">While helping out in some software proejcts, no AI is used for art, descriptions or read mes</p>
       <button class="toggle">Read More</button>
     </div>
