--- a/Projects.html
+++ b/Projects.html
@@ -28,26 +28,60 @@
   <span>Projects</span>
   <img src="images\pk-industries-high-resolution-logo-transparent.png">
 </h1>
+<div class="projectHeader">
+  <h2>
+    While no project is truly completed, check out some shipped and in progress ones here
+  </h2>
+</div>
+
 
 <div class="Projects">
   <h2>
     Finished Projects:
   </h2>
-  <p>
-  
-  </p>
+
+    <a href="" class="projectBlock">
+      <h3>Moonbeam Digital Synthesizer</h3>
+      <img src="images\Moonbeam Synth Promo.png" alt="Promo image for the Moonbeam Synthesizer">
+      <p>My most recent hardware project. A custom DAWless digital synth made from a Raspberry Pi Pico and the Mozzi audio library</p>
+      <p>Completed: 11/4/25</p>
+
+    </a>
+
+    <a href="" class="projectBlock">
+      <h3>DM Atlas</h3>
+      <img src="images\dmAtlas.jpg" alt="Image of the DM Atlas">
+      <p>My first PCB, a DND themed dice roller with custom graphics and art</p>
+      <p>Completed: 8/17/25</p>
+
+    </a>
+ 
   <h2>
     Current Projects:
   </h2>
-  <p>
-  
-  </p>
+
+    <a href="" class="projectBlock">
+      <h3>Cyber Watch32</h3>
+      <p>A wearable digital wristwatch and my most complex circuit board ever designed featuring the STM32 MCU</p>
+      <img src="images\CW32promoImage.png" alt="Picture of cyber watch PCB">
+      <p>Started: 10/5/25</p>
+    </a>
+
+    <a href="" class="projectBlock">
+      <h3>PDAV3</h3>
+      <p>The third revision of my personal digital assitant, now with a rotary encoder</p>
+      <img src="images\PDAV3Image.jpg" alt="Picture of PDAV3">
+      <p>Started: 10/5/25</p>
+    </a>
+
+  </div>
+
   </div>
 
 
  <div class="footer">
-  <h2>Want to learn more?</h2>
-  <p>All my projects are open source on <a href="https://github.com/Kacman62" target="_blank"  style="text-decoration:none">Github</a>, feel free to make them and show them off</p>
+  <h2>Not every project has a write up here</h2>
+  <p>Good thing all my projects are open source on <a href="https://github.com/Kacman62" target="_blank"  style="text-decoration:none">Github</a> with more in depth descriptions and guides</p>
 </div> 
 
   <script src="PKIndustries.js"></script>
