Created and added new logos

--- a/Projects.html
+++ b/Projects.html
@@ -26,7 +26,7 @@
 
 <h1>
   <span>Projects</span>
-  <img src="images\pk-industries-high-resolution-logo-transparent.png">
+  <img src="images\PKIndustriesBluePrint.png">
 </h1>
 <div class="projectHeader">
   <h2>
