--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,7 +26,7 @@
 
 <h1>
   <span>About Us</span>
-  <img src="images\pk-industries-high-resolution-logo-transparent.png">
+  <img src="images\PKIndustriesWaterColor.png">
 </h1>
 
 <div class="CEO">
@@ -60,7 +60,7 @@
       <img src="images\chatgpt.png" alt="CHATGPT">
       <h3>ChatGPT</h3>
       <p class="short">Software Consultant</p>
-      <p class="long hidden">While helping out in some software proejcts, no AI is used for art, descriptions or read mes</p>
+      <p class="long hidden">While helping out in some software projects, no AI is used for art, descriptions or read mes</p>
       <button class="toggle">Read More</button>
     </div>
 
