Started the project write ups

--- a/Projects.html
+++ b/Projects.html
@@ -40,7 +40,7 @@
     Finished Projects:
   </h2>
 
-    <a href="" class="projectBlock">
+    <a href="MBProject.html" class="projectBlock">
       <h3>Moonbeam Digital Synthesizer</h3>
       <img src="images\Moonbeam Synth Promo.png" alt="Promo image for the Moonbeam Synthesizer">
       <p>My most recent hardware project. A custom DAWless digital synth made from a Raspberry Pi Pico and the Mozzi audio library</p>
