--- a/Projects.html
+++ b/Projects.html
@@ -22,12 +22,15 @@
   <li><a href="#">Blog</a></li>
 </ul>
 
-<div class="rectangle"></div>
+<div class="rectangle">
+
 
 <h1>
   <span>Projects</span>
   <img src="images\PKIndustriesBluePrint.png">
 </h1>
+
+</div>
 <div class="projectHeader">
   <h2>
     While no project is truly completed, check out some shipped and in progress ones here
