adjusted word spacing in blog and projects

--- a/MBProject.html
+++ b/MBProject.html
@@ -15,15 +15,15 @@
 <body>
   
 <ul>
-  <li style="float:left"><a href="PKIndustries.html" class="active">PK Industries</a></li>
+  <li style="float:left"><a href="PKIndustries.html">PK Industries</a></li>
   <li style="border-right:none"><a href="aboutUs.html" >About Us</a></li>
-  <li><a href="Projects.html">Projects</a></li>
+  <li><a href="Projects.html"  class="active">Projects</a></li>
   <li><a href="#">Guide</a></li>
   <li><a href="#">Blog</a></li>
 </ul>
 
 <div class="rectangle"></div>
-
+<div class="blogWords">
 <h1>
   <span>Moonbeam Digital Synthesizer</span>
   <img src="images/Moonbeam Synth Promo.png">
@@ -34,9 +34,10 @@
 </h2>
 
 <p>
-    Lorem Ipsum idk
+    Starting out as a MIDI controller and evolving into a standalone synth, the Moonbeam Digital Synthesizer aims to push the limits of microcontroller sound capabilities
 </p>
 
+</div>
 
  <div class="footer">
   <h2>Want to learn more?</h2>
