--- a/MBProject.html
+++ b/MBProject.html
@@ -37,6 +37,44 @@
     Starting out as a MIDI controller and evolving into a standalone synth, the Moonbeam Digital Synthesizer aims to push the limits of microcontroller sound capabilities
 </p>
 
+<h2>
+  Some backstory now
+</h2>
+
+<p>
+  After browsing the Hack Club slack, (really go check them out they're great) I saw a new hardware program released,
+  Blueprint. Similar to previous events this one provides funding for hardware projects of different levels of complexity. 
+  After just finishing the design for the Cyber Watch32 (you can check that out here) I was burned out on brain power and 
+  wanted to follow a guide for my next project. I had always wanted to do some kind of audio project and conveniently there was 
+  a guide for a MIDI keyboard. After doing a lot of research though, I realized that MIDI controllers need an external software, 
+  often called a Digital Audio Workstation or DAW to work. I imagined a more complete all in one station to create music, add effects
+  and maybe even loop. What I wanted was a synthesizer
+</p>
+
+<h2>
+  The plan
+</h2>
+
+<p>
+  All good projects start with a good plan. I did a ton of research on lots of different ways to make sound. I had previously pulled a speaker 
+  out of an old DVD player and I had a pack of buttons to act as piano keys for now. As always, however, software became my weakness.
+  There are a couple of ways to make sound, but the general idea is that you send analog data, either PWM or true analog, out of an IO 
+  and conect it to a speaker or amplifier. The faster the oscillations of that wave, the higher the pitch. This is where "A = 440Hz" comes from, 
+  a wave going back and forth 440 times per second creates an "A" note. There are also a few audio libraries to abstract this away and make life a lot easier.
+  I found a few online examples using the Mozzi audio library and even got sound to come through, albeit very faintly, but after hours of reasearch 
+  I was unable to find a single project that made a standalone synthesizer using the Mozzi library. (Though there is a pretty good one using an Arduino and
+  manually playing sin waves)
+</p>
+
+<h2>
+  The prototype
+</h2>
+
+<p>
+  Through a lot of sketchy arduino code I got different notes to play when one of 12 buttons were pressed. I then added 3 slide potentiometers, an 128px OLED 
+  and rotary encoders and put all of it on a breadboard.
+</p>
+
 </div>
 
  <div class="footer">
