fixed project header

--- a/Projects.html
+++ b/Projects.html
@@ -22,7 +22,7 @@
   <li><a href="#">Blog</a></li>
 </ul>
 
-<div class="rectangle">
+<div class="rectangle"></div>
 
 
 <h1>
@@ -30,7 +30,7 @@
   <img src="images\PKIndustriesBluePrint.png">
 </h1>
 
-</div>
+
 <div class="projectHeader">
   <h2>
     While no project is truly completed, check out some shipped and in progress ones here
