--- a/PKIndustries.html
+++ b/PKIndustries.html
@@ -25,7 +25,7 @@
 <div class="rectangle"></div>
 
 <h1>
-  <span>Welcome to PK industries</span>
+  <span></span>
   <img src="images\pk-industries-high-resolution-logo-transparent.png">
 </h1>
 
