small fixes in css

--- a/PKIndustries.html
+++ b/PKIndustries.html
@@ -42,7 +42,7 @@
     <h2>
     What is all this?
     </h2>
-    <p>Half fake brand webpage and half personal websitge and blog, welcome to PK Industries. Here you can read all about me, my projects, and my little anecdotes I thought I'd share
+    <p>   Half fake brand webpage and half personal website and blog, welcome to PK Industries. Here you can read all about me, my projects, and my little anecdotes I thought I'd share
     </p>
 
    <p> PK industries is a fake brand created and operated by me, P. Kac, to house all my electronics and code projects. 
