fixed small text formatting issues

--- a/MBProject.html
+++ b/MBProject.html
@@ -72,7 +72,8 @@
 
 <p>
   Through a lot of sketchy arduino code I got different notes to play when one of 12 buttons were pressed. I then added 3 slide potentiometers, an 128px OLED 
-  and rotary encoders and put all of it on a breadboard.
+  and rotary encoders and put all of it on a breadboard. One slider to control volume, one for pitch, and one for vibrator (the shake and color of a note) 
+  There were a couple issues, mostly with playing notes at the same time, but it worked well enough to start designing a board and making this a full featured project. 
 </p>
 
 </div>
