fixed footer background issues

--- a/PKIndustries.html
+++ b/PKIndustries.html
@@ -52,11 +52,9 @@
       Anyone can create thigns, and returning to past projects is the best way to improve new ones
     </p>
     <h2>
-    First time here?
+    By the numbers
     </h2>
-    <p>
-    Check out these projects   
-    </p>
+
 </div>
 </div>
 
