adjusted background to be legible

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -54,7 +54,7 @@
       <p class="short">Founder, CEO, and Lead Engineer of PK Industries</p>
       <p class="long hidden">P. Kac designs circuit boards, software and runs the PK Industries website.</p>
       <button class="toggle">Read More</button>
-    </div>images\PKIExport.png
+    </div>
 
     <div class="member">
       <img src="images\chatgpt.png" alt="CHATGPT">
