--- a/Projects.html
+++ b/Projects.html
@@ -18,8 +18,8 @@
   <li style="float:left"><a href="PKIndustries.html">PK Industries</a></li>
   <li style="border-right:none"><a href="aboutUs.html">About Us</a></li>
   <li><a href="Projects.html"  class="active">Projects</a></li>
-  <li><a href="#">Guide</a></li>
   <li><a href="#">Blog</a></li>
+  <li><a href="#">My Space</a></li>
 </ul>
 
 <div class="rectangle"></div>
