--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,8 +18,8 @@
   <li style="float:left"><a href="PKIndustries.html">PK Industries</a></li>
   <li style="border-right:none"><a href="aboutUs.html" class="active">About Us</a></li>
   <li><a href="Projects.html">Projects</a></li>
-  <li><a href="#">Guide</a></li>
   <li><a href="#">Blog</a></li>
+  <li><a href="#">My Space</a></li>
 </ul>
 
 <div class="rectangle"></div>
