added a picture fo github contributions using rshahs api

--- a/PKIndustries.html
+++ b/PKIndustries.html
@@ -55,6 +55,8 @@
     By the numbers
     </h2>
 
+    <img src="https://ghchart.rshah.org/008253/Kacman62" alt="Kacman62's Github chart" />
+
 </div>
 </div>
 
