--- a/PKIndustries.html
+++ b/PKIndustries.html
@@ -56,6 +56,13 @@
     </h2>
 
     <img src="https://ghchart.rshah.org/008253/Kacman62" alt="Kacman62's Github chart" />
+    <div class="Stats">
+    <h2>
+      Projects: 7 <br> <!-- hard coded, might try and use hackatime API later, but dont want to expose API key -->
+      Coding Hours: 44Hrs <br>
+      Most Used Language: C++
+    </h2>
+    </div>
 
 </div>
 </div>
