fixed issues in main page not bheing center

--- a/PKIndustries.html
+++ b/PKIndustries.html
@@ -56,6 +56,7 @@
     </h2>
 
     <img src="https://ghchart.rshah.org/008253/Kacman62" alt="Kacman62's Github chart" />
+    Github commit tracker
     <div class="Stats">
     <h2>
       Projects: 7 <br> <!-- hard coded, might try and use hackatime API later, but dont want to expose API key -->
