fixed about us section being weird in codespaces

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,7 +26,7 @@
 
 <h1>
   <span>About Us</span>
-  <img src="images\PKIndustriesWaterColor.png">
+  <img src="images/PKIndustriesWaterColor.png">
 </h1>
 
 <div class="CEO">
@@ -49,7 +49,7 @@
 
   <div class="team-grid">
     <div class="member">
-      <img src="images\CEOWorking.JPG" alt="P. Kac">
+      <img src="images/CEOWorking.JPG" alt="P. Kac">
       <h3>P. Kac</h3>
       <p class="short">Founder, CEO, and Lead Engineer of PK Industries</p>
       <p class="long hidden">P. Kac designs circuit boards, software and runs the PK Industries website.</p>
@@ -57,7 +57,7 @@
     </div>
 
     <div class="member">
-      <img src="images\chatgpt.png" alt="CHATGPT">
+      <img src="images/chatgpt.png" alt="CHATGPT">
       <h3>ChatGPT</h3>
       <p class="short">Software Consultant</p>
       <p class="long hidden">While helping out in some software projects, no AI is used for art, descriptions or read mes</p>
@@ -65,7 +65,7 @@
     </div>
 
     <div class="member">
-      <img src="images\hackClub.png" alt="Hack Club">
+      <img src="images/hackClub.png" alt="Hack Club">
       <h3>Hack Club</h3>
       <p class="short">Lead Investor and Sponsor</p>
       <p class="long hidden">Hack Club provides invaluable mentorship and guides as well as investment and sponsorship money</p>
@@ -73,7 +73,7 @@
     </div>
 
     <div class="member">
-      <img src="images\harborFreight.png" alt="Harbor Freight">
+      <img src="images/harborFreight.png" alt="Harbor Freight">
       <h3>Harbor Freight</h3>
       <p class="short">Premium Tool Supplier</p>
       <p class="long hidden">Our hand tools are supplied by Harbor Freight and have never broken yet. </p>
@@ -89,7 +89,7 @@
     </div>
 
     <div class="member">
-      <img src="images\jlcpcb.png" alt="JLCPCB">
+      <img src="images/jlcpcb.png" alt="JLCPCB">
       <h3>JLCPCB</h3>
       <p class="short">Board Partner</p>
       <p class="long hidden">JLCPCB and LCSC have provided board manufacturing and components for our PCBs</p>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="member">
-      <img src="images\vscode.png" alt="VSCode">
+      <img src="images/vscode.png" alt="VSCode">
       <h3>VS Code</h3>
       <p class="short">Software Development</p>
       <p class="long hidden">Our code is written in mainly C++ with VS Code, and uploaded to Github</p>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="member">
-      <img src="images\kicad.png" alt="KiCad">
+      <img src="images/kicad.png" alt="KiCad">
       <h3>KiCad</h3>
       <p class="short">Hardware Development</p>
       <p class="long hidden">Our circuit boards are designed in KiCad and routed by hand</p>
