forgot a link in blog post

--- a/MBProject.html
+++ b/MBProject.html
@@ -43,7 +43,7 @@
     <p>
       After browsing the Hack Club Slack (really go check them out, they're great), I saw a new hardware program released called Blueprint. 
       Similar to previous events, this one provides funding for hardware projects of different levels of complexity. 
-      After just finishing the design for the <a href="#">Cyber Watch32</a>, I was burned out on brain power and wanted to follow a guide for my next project. 
+      After just finishing the design for the <a href="https://github.com/Kacman62/CyberWatch32">Cyber Watch32</a>, I was burned out on brain power and wanted to follow a guide for my next project. 
       I had always wanted to do some kind of audio project, and conveniently there was a guide for a MIDI keyboard. 
       After doing a lot of research, I realized that MIDI controllers need an external software, often called a Digital Audio Workstation or DAW, to work. 
       I imagined a more complete all-in-one station to create music, add effects, and maybe even loop. What I wanted was a synthesizer.
