Added the CW32 Blog

--- a/MBProject.html
+++ b/MBProject.html
@@ -88,7 +88,7 @@
     </p>
     <p>
       Moving everything onto the board was challenging due to component size. The final board measures about 350mm x 90mm to fit all switches. 
-      Audio chips and passive components were easier to route, and I’m very happy with the final design.
+      Audio chips and passive components were easier to route, and I'm very happy with the final design.
     </p>
 
     <h2>The Code</h2>
