added images to the CW32 blog, and added an under construction page for other blogs

--- a/CWProject.html
+++ b/CWProject.html
@@ -24,10 +24,13 @@
 
 <div class="rectangle"></div>
 
+<div class="BlogPromo">
 <h1>
   <span>CyberWatch32</span>
-  <img src="images/Moonbeam Synth Promo.png">
+  <img src="images\CW32Images\CW32BoardRender.png">
 </h1>
+</div>
+
 <div class="blogWords">
 
 <h2>CyberWatch32 Project Log </h2>
