--- a/MBProject.html
+++ b/MBProject.html
@@ -24,10 +24,12 @@
 
 <div class="rectangle"></div>
 
+<div class="BlogPromo">
 <h1>
   <span>Moonbeam Digital Synthesizer</span>
   <img src="images/Moonbeam Synth Promo.png">
 </h1>
+</div>
 <div class="blogWords">
 
 <h2>Moonbeam Digital Synthesizer Project Log</h2>
