--- a/Projects.html
+++ b/Projects.html
@@ -51,7 +51,7 @@
 
     </a>
 
-    <a href="" class="projectBlock">
+    <a href="UnderConstruction.html" class="projectBlock">
       <h3>DM Atlas</h3>
       <img src="images\dmAtlas.jpg" alt="Image of the DM Atlas">
       <p>My first PCB, a DND themed dice roller with custom graphics and art</p>
@@ -63,14 +63,14 @@
     Current Projects:
   </h2>
 
-    <a href="" class="projectBlock">
+    <a href="CWProject.html" class="projectBlock">
       <h3>Cyber Watch32</h3>
       <img src="images\CW32promoImage.png" alt="Picture of cyber watch PCB">
       <p>A wearable digital wristwatch and my most complex circuit board ever designed featuring the STM32 MCU</p>
       <p>Started: 10/5/25</p>
     </a>
 
-    <a href="" class="projectBlock">
+    <a href="UnderConstruction.html" class="projectBlock">
       <h3>PDAV3</h3>
       <img src="images\PDAV3Image.jpg" alt="Picture of PDAV3">
       <p>The third revision of my personal digital assitant, now with a rotary encoder</p>
