added a white version of the PKI logo added blogs to the nav bar

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,7 +18,7 @@
   <li style="float:left"><a href="PKIndustries.html">PK Industries</a></li>
   <li style="border-right:none"><a href="aboutUs.html" class="active">About Us</a></li>
   <li><a href="Projects.html">Projects</a></li>
-  <li><a href="#">Blog</a></li>
+  <li><a href="Blogs.html">Blog</a></li>
   <li><a href="#">My Space</a></li>
 </ul>
 
