--- a/MBProject.html
+++ b/MBProject.html
@@ -18,7 +18,7 @@
   <li style="float:left"><a href="PKIndustries.html">PK Industries</a></li>
   <li style="border-right:none"><a href="aboutUs.html" >About Us</a></li>
   <li><a href="Projects.html"  class="active">Projects</a></li>
-  <li><a href="#">Blog</a></li>
+  <li><a href="Blogs.html">Blog</a></li>
   <li><a href="#">My Space</a></li>
 </ul>
 
