--- a/Blogs.html
+++ b/Blogs.html
@@ -40,7 +40,7 @@
 
 <div class="Projects">
   <h2>
-    Finished Projects:
+    My Favorites
   </h2>
 
     <a href="MBProject.html" class="projectBlock">
@@ -60,7 +60,7 @@
     </a>
  
   <h2>
-    Current Projects:
+    All Blogs
   </h2>
 
     <a href="CWProject.html" class="projectBlock">
