added images to cw32 and professional projects

--- a/CWProject.html
+++ b/CWProject.html
@@ -70,6 +70,8 @@
      The IMU is the BMI270 from… Bosch? Yeah the german power tool company also makes semiconductors. The LSM303 magnetometer provides a compass as well as another IMU, with less features, in order to correct the readings.
     </p>
 
+    <img src="images\CW32Images\Bosch.png">
+
     <h2>Board Design</h2>
     <p>
      After designing the entire board once already, I was determined to make this board the best possible and take my time so I didn't have to have a 15 day+ delay from ordering and shipping the PCB. 
@@ -77,11 +79,15 @@
      There are also cutouts in the top and bottom for a watch strap.
     </p>
 
+    <img src="images\CW32Images\CW32BoardDesign.png">
+
     <h2>First Assembly</h2>
     <p>
       Now this is the reason why the project is still in progress. The chips were way smaller than I expected, and even with a hot plate and stencil I couldn’t get a good assembly. The first one lit up the charge LED, but the power regulator got bridged and broke. 
       The next two didn’t even light up and just shorted the USB. I think the problem comes from the uncommon USB C port I used, and the second row of SMD pads are bridged and I just can’t see it, but for now the project is on hold.
     </p>
+
+    <img src="images\CW32Images\failure.png">
 
 </div>
 
