--- a/ProfProjBlog.html
+++ b/ProfProjBlog.html
@@ -27,7 +27,7 @@
 <div class="BlogPromo">
 <h1>
   <span>Professional Projects</span>
-  <img src="images\CW32Images\CW32BoardRender.png">
+  <img src="images\ProfProjImages\BrandKit.png">
 </h1>
 </div>
 
@@ -60,12 +60,15 @@
      This one is super easy too, I use <a href="https://logo.com/">Logo.com</a> for all my projects and it gives you 1 logo for free, as well as a font and colors. For code, the flow is pretty similar, I usually make a title card image for my projects, even if it's different from its logo.
     </p>
 
+    <img src="images\ProfProjImages\BrandKit.png">
+
     <h2>Documentation</h2>
     <p>  
     People love to see other projects, see tip 1, and it helps a lot to see not only the design process, but also how to use it. So make it easy for other people and document it. Personally I use both Github and this website to make slightly different write ups for my projects, and host all my files open source on Github.
     In doing this, other people are able to find, research, and recreate my projects. This makes it a lot easier to get feedback and grow projects. For software, this means you should probably comment your code.
     </p>
     
+    <img src="images\ProfProjImages\GithubDocumentation.png">
 
     <h2>Conclusion</h2>
     <p>
