--- a/Blogs.html
+++ b/Blogs.html
@@ -43,38 +43,22 @@
     My Favorites
   </h2>
 
-    <a href="MBProject.html" class="projectBlock">
-      <h3>Moonbeam Digital Synthesizer</h3>
-      <img src="images\Moonbeam Synth Promo.png" alt="Promo image for the Moonbeam Synthesizer">
-      <p>My most recent hardware project. A custom DAWless digital synth made from a Raspberry Pi Pico and the Mozzi audio library</p>
-      <p>Completed: 11/4/25</p>
-
-    </a>
-
-    <a href="UnderConstruction.html" class="projectBlock">
-      <h3>DM Atlas</h3>
-      <img src="images\dmAtlas.jpg" alt="Image of the DM Atlas">
-      <p>My first PCB, a DND themed dice roller with custom graphics and art</p>
-      <p>Completed: 8/17/25</p>
-
+    <a href="ProfProjBlog.html" class="projectBlock">
+      <h3>How to Make Professional Projects</h3>
+      <img src="images\ProfProjImages\BrandKit.png">
+      <p>3 Easy tricks to make more professional projects</p>
+      <p>Published: 11/15/25</p>
     </a>
  
   <h2>
     All Blogs
   </h2>
 
-    <a href="CWProject.html" class="projectBlock">
-      <h3>Cyber Watch32</h3>
-      <img src="images\CW32promoImage.png" alt="Picture of cyber watch PCB">
-      <p>A wearable digital wristwatch and my most complex circuit board ever designed featuring the STM32 MCU</p>
-      <p>Started: 10/5/25</p>
-    </a>
-
-    <a href="UnderConstruction.html" class="projectBlock">
-      <h3>PDAV3</h3>
-      <img src="images\PDAV3Image.jpg" alt="Picture of PDAV3">
-      <p>The third revision of my personal digital assitant, now with a rotary encoder</p>
-      <p>Started: 10/5/25</p>
+    <a href="ProfProjBlog.html" class="projectBlock">
+      <h3>How to Make Professional Projects</h3>
+      <img src="images\ProfProjImages\BrandKit.png">
+      <p>3 Easy tricks to make more professional projects</p>
+      <p>Published: 11/15/25</p>
     </a>
 
   </div>
