--- a/Projects.html
+++ b/Projects.html
@@ -19,7 +19,7 @@
   <li style="border-right:none"><a href="aboutUs.html">About Us</a></li>
   <li><a href="Projects.html"  class="active">Projects</a></li>
   <li><a href="Blogs.html">Blog</a></li>
-  <li><a href="#">My Space</a></li>
+  <li><a href="MySpace.html">My Space</a></li>
 </ul>
 
 <div class="rectangle"></div>
