--- a/MBProject.html
+++ b/MBProject.html
@@ -15,7 +15,7 @@
 <body>
   
 <ul>
-  <li style="float:left"><a href="PKIndustries.html">PK Industries</a></li>
+  <li style="float:left"><a href="index.html">PK Industries</a></li>
   <li style="border-right:none"><a href="aboutUs.html" >About Us</a></li>
   <li><a href="Projects.html"  class="active">Projects</a></li>
   <li><a href="Blogs.html">Blog</a></li>
