--- a/PKindustries/ProfProjBlog.html
+++ b/PKindustries/ProfProjBlog.html
@@ -17,8 +17,8 @@
 <ul>
   <li style="float:left"><a href="index.html">PK Industries</a></li>
   <li style="border-right:none"><a href="aboutUs.html" >About Us</a></li>
-  <li><a href="Projects.html"  class="active">Projects</a></li>
-  <li><a href="Blogs.html">Blog</a></li>
+  <li><a href="Projects.html">Projects</a></li>
+  <li><a href="Blogs.html"   class="active">Blog</a></li>
   <li><a href="MySpace.html">My Space</a></li>
 </ul>
 
