--- a/PKindustries/Blogs.html
+++ b/PKindustries/Blogs.html
@@ -14,22 +14,13 @@
 
 <body>
   
-<ul>
-  <li style="float:left"><a href="index.html">PK Industries</a></li>
+<ol>
+  <li style="float:left"><a href="index.html"><img src="images\PKIWhite.png"></a></li>
   <li style="border-right:none"><a href="aboutUs.html">About Us</a></li>
   <li><a href="Projects.html">Projects</a></li>
   <li><a href="Blogs.html" class="active">Blog</a></li>
   <li><a href="MySpace.html">My Space</a></li>
-</ul>
-
-<div class="rectangle"></div>
-
-
-<h1>
-  <span>Blogs</span>
-  <img src="images\PKIWhite.png">
-</h1>
-
+</ol>
 
 <div class="projectHeader">
   <h2>
