--- a/PKindustries/MySpace.html
+++ b/PKindustries/MySpace.html
@@ -14,20 +14,13 @@
 
 <body>
   
-<ul>
-  <li style="float:left"><a href="index.html">PK Industries</a></li>
+<ol>
+  <li style="float:left"><a href="index.html">  <img src="images\PKIndustriesPixelArt.png" style="image-rendering: pixelated"></a></li>
   <li style="border-right:none"><a href="aboutUs.html" >About Us</a></li>
   <li><a href="Projects.html">Projects</a></li>
   <li><a href="Blogs.html">Blog</a></li>
   <li><a href="MySpace.html"  class="active">My Space</a></li>
-</ul>
-
-<div class="rectangle"></div>
-
-<h1>
-  <span>My Space</span>
-  <img src="images\PKIndustriesPixelArt.png" style="image-rendering: pixelated">
-</h1>
+</ol>
 
 <div class="projectHeader">
   <h2>
