--- a/PKindustries/Projects.html
+++ b/PKindustries/Projects.html
@@ -14,21 +14,13 @@
 
 <body>
   
-<ul>
-  <li style="float:left"><a href="index.html">PK Industries</a></li>
-  <li style="border-right:none"><a href="aboutUs.html">About Us</a></li>
+<ol>
+  <li style="float:left"><a href="index.html">  <img src="images\PKIndustriesBluePrint.png"></a></li>
+  <li style="border-right:none"><a href="aboutUs.html" >About Us</a></li>
   <li><a href="Projects.html"  class="active">Projects</a></li>
   <li><a href="Blogs.html">Blog</a></li>
   <li><a href="MySpace.html">My Space</a></li>
-</ul>
-
-<div class="rectangle"></div>
-
-
-<h1>
-  <span>Projects</span>
-  <img src="images\PKIndustriesBluePrint.png">
-</h1>
+</ol>
 
 
 <div class="projectHeader">
