--- a/PKindustries/UnderConstruction.html
+++ b/PKindustries/UnderConstruction.html
@@ -14,20 +14,13 @@
 
 <body>
   
-<ul>
-  <li style="float:left"><a href="index.html">PK Industries</a></li>
+<ol>
+  <li style="float:left"><a href="index.html"><img src="images\pk-industries-high-resolution-logo-transparent.png"></a></li>
   <li style="border-right:none"><a href="aboutUs.html" >About Us</a></li>
   <li><a href="Projects.html">Projects</a></li>
   <li><a href="Blogs.html">Blog</a></li>
   <li><a href="MySpace.html">My Space</a></li>
-</ul>
-
-<div class="rectangle"></div>
-
-<h1>
-  <span></span>
-  <img src="images\pk-industries-high-resolution-logo-transparent.png">
-</h1>
+</ol>
 
 <h2>
     Sorry, this website is still under construction and this page does not exist yet, please check back later
