--- a/PKindustries/index.html
+++ b/PKindustries/index.html
@@ -14,23 +14,15 @@
 
 <body>
   
-<ul>
-  <li style="float:left"><a href="index.html" class="active">PK Industries</a></li>
-  <li style="border-right:none"><a href="aboutUs.html" >About Us</a></li>
+
+
+<ol>
+  <li style="float:left"><a href="index.html" class="active"><img src="images\pk-industries-high-resolution-logo-transparent.png"></a></li>
+  <li style="border-right:none"><a href="aboutUs.html">About Us</a></li>
   <li><a href="Projects.html">Projects</a></li>
   <li><a href="Blogs.html">Blog</a></li>
   <li><a href="MySpace.html">My Space</a></li>
-</ul>
-
-<div class="rectangle"></div>
-
-<h1>
-  <span></span>
-  <img src="images\pk-industries-high-resolution-logo-transparent.png">
-</h1>
-
-
-
+</ol>
 
 
 <div class="row">
