--- a/PKindustries/index.html
+++ b/PKindustries/index.html
@@ -27,7 +27,8 @@
 
 <div class="row">
   <div class="side"><p>
-  lorem ipsum somehting something
+  Check out my latest blog <br><br>
+  <a href="ProfProjBlog.html">How to make Professional Projects</a>
 </p></div>
 
   <div class="main">
