more optimazations and fixes for both mobile and desktop

--- a/PKindustries/CWProject.html
+++ b/PKindustries/CWProject.html
@@ -27,7 +27,7 @@
 <div class="BlogPromo">
 <h1>
   <span>CyberWatch32</span>
-  <img src="images\CW32Images\CW32BoardRender.png">
+  <img src="images\CW32Images\CW32BoardRender.png" style="object-position: 50% 30%;">
 </h1>
 </div>
 
