--- a/PKindustries/index.html
+++ b/PKindustries/index.html
@@ -42,7 +42,7 @@
   I have been making things since the start of 2025 and now you can read all about it here.</p>
 
     <p>At PK industries creating things is all about rapid prototyping, iteration, and polishing later. We know our products are a little rough around the edges, and thats ok.
-      Anyone can create thigns, and returning to past projects is the best way to improve new ones
+      Anyone can create things, and returning to past projects is the best way to improve new ones
     </p>
     <h2>
     By the numbers
