updated blog page to include new blog

--- a/PKindustries/Blogs.html
+++ b/PKindustries/Blogs.html
@@ -34,16 +34,23 @@
     My Favorites
   </h2>
 
-    <a href="ProfProjBlog.html" class="projectBlock">
-      <h3>How to Make Professional Projects</h3>
-      <img src="images\ProfProjImages\BrandKit.png">
-      <p>3 Easy tricks to make more professional projects</p>
-      <p>Published: 11/15/25</p>
+    <a href="OpenGlBlog.html" class="projectBlock">
+      <h3>OpenGL: It's not the worst</h3>
+      <img src="images\OpenGLImages\OpenGLFire.png" style="object-position: 50% 25%;">
+      <p>My adventures and pains with 1 day in OpenGL</p>
+      <p>Published: 11/20/25</p>
     </a>
  
   <h2>
     All Blogs
   </h2>
+
+    <a href="OpenGlBlog.html" class="projectBlock">
+      <h3>OpenGL: It's not the worst</h3>
+      <img src="images\OpenGLImages\OpenGLFire.png" style="object-position: 50% 25%;">
+      <p>My adventures and pains with 1 day in OpenGL</p>
+      <p>Published: 11/20/25</p>
+    </a>
 
     <a href="ProfProjBlog.html" class="projectBlock">
       <h3>How to Make Professional Projects</h3>
