--- a/PKindustries/aboutUs.html
+++ b/PKindustries/aboutUs.html
@@ -71,7 +71,7 @@
       <img src="images/harborFreight.png" alt="Harbor Freight">
       <h3>Harbor Freight</h3>
       <p class="short">Premium Tool Supplier</p>
-      <p class="long hidden">Our hand tools are supplied by Harbor Freight and have never broken yet. </p>
+      <p class="long hidden">Our hand tools are supplied by Harbor Freight and have not broken yet. </p>
       <button class="toggle">Read More</button>
     </div>
 
