added image to blog

--- a/PKindustries/ZooomVGAProject.html
+++ b/PKindustries/ZooomVGAProject.html
@@ -27,7 +27,7 @@
 <div class="BlogPromo">
 <h1>
   <span>ZoomVGA Devboard</span>
-  <img src="images/Moonbeam Synth Promo.png">
+  <img src="images/ZooomVGAImages/ZooomVGAPromo.png">
 </h1>
 </div>
 <div class="blogWords">
