integrated the zooomvga blog

--- a/PKindustries/Projects.html
+++ b/PKindustries/Projects.html
@@ -35,6 +35,13 @@
     Finished Projects:
   </h2>
 
+    <a href="ZooomVGAProject.html" class="projectBlock">
+      <h3>ZooomVGA Devboard and the art of Speedrunning Hardware</h3>
+      <img src="images/ZooomVGAImages/ZooomVGAPromo.png" alt="Promo image for the ZooomVGA">
+      <p>An STM32 Devboard, designed in 7 hours and featuring VGA out</p>
+      <p>Completed: 11/23/25</p>
+    </a>
+
     <a href="MBProject.html" class="projectBlock">
       <h3>Moonbeam Digital Synthesizer</h3>
       <img src="images\Moonbeam Synth Promo.png" alt="Promo image for the Moonbeam Synthesizer">
