--- a/PKindustries/index.html
+++ b/PKindustries/index.html
@@ -28,7 +28,7 @@
 <div class="row">
   <div class="side"><p>
   Check out my latest blog <br><br>
-  <a href="ProfProjBlog.html">How to make Professional Projects</a>
+  <a href="OpenGlBlog.html">OpenGL, It's not the worst</a>
 </p></div>
 
   <div class="main">
