--- a/PKindustries/ZooomVGAProject.html
+++ b/PKindustries/ZooomVGAProject.html
@@ -46,7 +46,7 @@
      
         After browsing the Hack CLub slack, I saw there was a zoom call for Blueprint, the hardware program and I decided to join in. 
         The theme was a Trace Race, where you try to make a board in the shortest amount of time. 
-        Just an hour before I saw a VGA library for the exact same STM32 module in the challenge and I got an idea forming. 
+        Just an hour before I saw a <a href="https://github.com/RoCorbera/BlueVGA"> VGA Library</a> for the exact same STM32 module in the challenge and I got an idea forming. 
 
     </p>
 
@@ -55,27 +55,22 @@
         The schematic was very easy to make. This version of the STM32 has built in USB support and the lack of battery meant that this board has relatively few components. 
     </p>
 
+    <img src="images\ZooomVGAImages\ZooomVGASchematic.png">
+
     <h2>Where it Goes Wrong</h2>
     <p>
       After another hour and a half I moved onto the board design. The first challenge was making it fit onto a breadboard. 
       The spacing is very tight and the VGA connector is bigger than the width of the outermost pins so I needed to flange the board outwards to make everything fit.
     </p>
 
-    <h2>The Plan</h2>
-    <p>
-      All good projects start with a good plan. I did a ton of research on different ways to make sound. 
-      I had previously pulled a speaker out of an old DVD player and had a pack of buttons to act as piano keys for now. 
-      As always, however, software became my weakness. There are a couple of ways to make sound, but the general idea is that 
-      you send analog data, either using digital signals with Pulse Width Modulation to approximate analog signals, or true analog, 
-      to a speaker or amplifier. The faster the oscillations of that wave, the higher the pitch. This is where "A = 440Hz" comes from: 
-      a wave going back and forth 440 times per second creates an "A" note.
-    </p>
     <p>
      After getting everything to fit I started the routing. The USB traces were a little tricky because you need to “Skew Match” them, but the tools in KiCad made it pretty easy. 
      To keep both the USB and the oscillator near the microcontroller I pushed it off to the left side. This made routing all the GPIO to the pin headers very difficult. 
      There's only 80 vias on the entire board and 75% of them are just for the left side of the GPIO. But I had the whole board done in under 4 hours. 
      I decided on the name ZooomVGA for this project because this is the fastest I've designed a project, and it was created mainly on the Zoom call.
     </p>
+
+    <img src="images\ZooomVGAImages\ZooomVGAOhNo.png">
 
     <h2>The Rest of the Owl</h2>
     <p>
@@ -84,6 +79,8 @@
          The rest of the components are from JLCPCB and cost $20, for a $35 total. Again, a big thanks to Hack Club for not only assisting in the board design, but also funding the board.
 
     </p>
+
+    <img src="images\ZooomVGAImages\ZooomVGABoard.png">
 
 </div>
 
