--- a/PKindustries/MySpace.html
+++ b/PKindustries/MySpace.html
@@ -34,6 +34,7 @@
   <img src="images\MySpaceImages\DSC00326.JPG">
   <img src="images\MySpaceImages\Screenshot 2025-11-15 193208.png">
   <img src="images\MySpaceImages\IMG_0729.jpg">
+  <img src ="images\MySpaceImages\campingSceneExport.gif">
 </div>
 
 
