updated about us section

--- a/PKindustries/aboutUs.html
+++ b/PKindustries/aboutUs.html
@@ -62,8 +62,8 @@
     <div class="member">
       <img src="images/hackClub.png" alt="Hack Club">
       <h3>Hack Club</h3>
-      <p class="short">Lead Investor and Sponsor</p>
-      <p class="long hidden">Hack Club provides invaluable mentorship and guides as well as investment and sponsorship money</p>
+      <p class="short">Mentorship</p>
+      <p class="long hidden">Hack Club provides invaluable mentorship and guides</p>
       <button class="toggle">Read More</button>
     </div>
 
