added top 8 blog

--- a/Blogs.html
+++ b/Blogs.html
@@ -45,6 +45,14 @@
     All Blogs
   </h2>
 
+  <a href="Top8Blog.html" class="projectBlock">
+    <h3>My 8 Biggest Tech Finds of 2025
+    </h3>
+    <img src="images\Top8Images\Screenshot 2025-12-13 141017.png" style="object-position: 50% 25%;">
+    <p>Counting down my top 8 biggest finds throughout the year</p>
+    <p>Published: 12/13/25</p>
+  </a>
+
     <a href="OpenGlBlog.html" class="projectBlock">
       <h3>OpenGL: It's not the worst</h3>
       <img src="images\OpenGLImages\OpenGLFire.png" style="object-position: 50% 25%;">
