--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
  <div class="footer">
   <h2>Finished already?</h2>
   <p> If you want to see more in depth explanations check out my <a href="https://github.com/Kacman62" target="_blank"  style="text-decoration:none">Github</a><br>This website is made by me in pure HTML, CSS and JS </p>
+
+  <pagering-link theme="light"></pagering-link>
+  <p>Enter the Webring!</p>
+
 </div> 
   <script src="PKIndustries.js"></script>
+  <script src="https://pagering.gideon.sh/embed.js" defer></script>
+
 </body>
 </html>
