updated webring box

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
   <h2>Finished already?</h2>
   <p> If you want to see more in depth explanations check out my <a href="https://github.com/Kacman62" target="_blank"  style="text-decoration:none">Github</a><br>This website is made by me in pure HTML, CSS and JS </p>
 
+  <p><br>Enter the Hack Club Webring!</p>
   <pagering-link theme="light"></pagering-link>
-  <p>Enter the Webring!</p>
+
 
 </div> 
   <script src="PKIndustries.js"></script>
