--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="row">
   <div class="side"><p>
   Check out my latest blog <br><br>
-  <a href="OpenGlBlog.html">OpenGL, It's not the worst</a>
+  <a href="2025AnnualMeeting.html">2025 Annual Shareholder Meeting</a>
 </p></div>
 
   <div class="main">
