fixed typo, added to blog section

--- a/Blogs.html
+++ b/Blogs.html
@@ -34,6 +34,14 @@
     My Favorites
   </h2>
 
+  <a href="2025AnnualMeeting.html" class="projectBlock">
+    <h3>2025 Annual Shareholder Meeting
+    </h3>
+    <img src="images/stonks.jpeg" style="object-position: 50% 25%;">
+    <p>Get updated on the history, and the future of the PK Industries Company</p>
+    <p>Published: 1/1/26</p>
+  </a>
+
     <a href="OpenGlBlog.html" class="projectBlock">
       <h3>OpenGL: It's not the worst</h3>
       <img src="images\OpenGLImages\OpenGLFire.png" style="object-position: 50% 25%;">
@@ -44,6 +52,14 @@
   <h2>
     All Blogs
   </h2>
+
+  <a href="2025AnnualMeeting.html" class="projectBlock">
+    <h3>2025 Annual Shareholder Meeting
+    </h3>
+    <img src="images/stonks.jpeg" style="object-position: 50% 25%;">
+    <p>Get updated on the history, and the future of the PK Industries Company</p>
+    <p>Published: 1/1/26</p>
+  </a>
 
   <a href="Top8Blog.html" class="projectBlock">
     <h3>My 8 Biggest Tech Finds of 2025
